syntax = "proto3";
import "zksync/config/genesis.proto";

package zksync.config.en;

message SnapshotRecovery {
  optional bool enabled = 1;
  optional uint64 postgres_max_concurrency = 2;
  optional uint64 tree_chunk_size = 3;
}

message Pruning {
  optional bool enabled = 1;
  optional uint32 chunk_size = 2;
  optional uint64 removal_delay_sec = 3;
  optional uint64 data_retention_sec = 4;
}

message ExternalNode {
  optional string main_node_url = 1; // required
  optional uint64 l2_chain_id = 2; // required
  optional uint64 l1_chain_id = 3; // required
  optional uint32 commitment_generator_max_parallelism = 4;
  optional string  tree_api_remote_url = 5;
  optional config.genesis.L1BatchCommitDataGeneratorMode l1_batch_commit_data_generator_mode = 6; // optional, default to rollup
  optional SnapshotRecovery snapshot_recovery = 7;
  optional Pruning pruning = 8;
}
